--- a/css/style.css
+++ b/css/style.css
@@ -1,38 +1,41 @@
 @import url('https://fonts.googleapis.com/css2?family=Red+Hat+Display:ital,wght@0,300..900;1,300..900&display=swap');
 
+html{
+    background-color: hsl(225, 100%, 94%);
+}
 body{
     height: 100vh;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    background-color: hsl(225, 100%, 94%);
+    
+    background: url('../images/pattern-background-desktop.svg') center center no-repeat;
+    background-size: cover;
 
 }
-.cont {
-    /* display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center; */
-}
+
 .card-cont {
+    background-color: hsl(225, 100%, 98%);
     display: flex;
     flex-direction: column;
     align-items: center;
+
     text-align: center;
     font-family: "Red Hat Display", sans-serif;
-    width: 451px;
-    height: 660px;
-    background-color: hsl(225, 100%, 98%);
-    border-top-left-radius: 20px;
-    border-top-right-radius: 20px;
+
+    max-width: 421px;
+    height: 630px;
+    border-radius: 20px;
 }
 
 .cont .card-cont .img {
     background: url('../images/illustration-hero.svg') center center no-repeat;
     background-size: cover;
-    width: 451px;
+
+    width: 421px;
     height: 222px;
+
     border-top-left-radius: 20px;
     border-top-right-radius: 20px;
 }
@@ -46,23 +49,81 @@ body{
 .cont .informacoes p {
     color: hsl(224, 23%, 55%);
     margin-top: 20px;
+    padding: 0 40px;
     
 }
 
-.card-musica {
-    background-color: hsl(225, 100%, 94%);
-    width: 354px;
+.cont .card-musica {
+    background-color: hsla(222, 63%, 95%, 0.411);
+    width: 340px;
     height: 99px;
+
     display: flex;
     justify-content: space-between;
     align-items: center;
+
     border-radius: 10px;
+    margin-top: 20px;
+    padding: 0 20px;
 }
-.card-musica-nome {
-    background-color: hsl(225, 44%, 45%);
+.cont .card-musica .card-musica-informacoes {
+    display: flex;
+    gap: 10px;
 }
-.card-musica p {
-    d
+.cont .card-musica .card-musica-informacoes .musica-informacoes >p {
+    font-size: 17px;
+    font-weight: 700;
+    color: hsl(223, 47%, 23%);
+}
+
+.cont .card-musica .card-musica-informacoes .musica-informacoes span {
+    color: hsl(224, 23%, 55%);
+}
+
+.cont .card-musica a {
+    font-weight: 500;
+    color: hsl(245, 75%, 52%);
+}
+
+.cont .card-musica a:hover {
+    text-decoration: none;
+}
+
+.cont .decoração-butao {
+    background-color: hsl(245, 75%, 52%);
+    width: 354px;
+    height: 52px;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    color: hsl(225, 100%, 98%);
+    font-weight: 700;
+    
+    border-radius: 10px;
+    margin-top: 20px;
+    cursor: pointer;
+    margin-bottom: 25px;
+
+    box-shadow: rgba(0, 0, 0, 0.45) 0px 25px 20px -20px;
+}
+
+.cont .butao .decoração-butao:hover {
+    background-color: hsl(245, 74%, 63%);
+    
+}
+
+.cont .butao span {
+    color: hsl(224, 23%, 55%);
+    font-weight: 700;
+    font-size: 18px;
+    cursor: pointer;
+}
+
+.cont .butao span:hover {
+    color: hsl(223, 47%, 23%);
 }
 .attribution { font-size: 11px; text-align: center; }
 .attribution a { color: hsl(228, 45%, 44%); }
+
