--- a/css/style.css
+++ b/css/style.css
@@ -27,6 +27,8 @@ body{
     max-width: 421px;
     height: 630px;
     border-radius: 20px;
+    margin-bottom: 10px;
+    margin-top: 10%;
 }
 
 .cont .card-cont .img {
@@ -47,6 +49,7 @@ body{
 }
 
 .cont .informacoes p {
+    text-wrap: pretty;
     color: hsl(224, 23%, 55%);
     margin-top: 20px;
     padding: 0 40px;
@@ -105,12 +108,14 @@ body{
     margin-top: 20px;
     cursor: pointer;
     margin-bottom: 25px;
+    transition: 0.5s;
 
     box-shadow: rgba(0, 0, 0, 0.45) 0px 25px 20px -20px;
 }
 
 .cont .butao .decoração-butao:hover {
-    background-color: hsl(245, 74%, 63%);
+    background-color: hsl(245, 77%, 59%);
+    
     
 }
 
